overflow fixed

--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -2,6 +2,7 @@
     margin: 80px auto;
     padding: 0 80px;
     position: relative;
+    overflow-x: hidden;
 }
 
 .next-btn, .back-btn{
