--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Outfit", sans-serif;
+  overflow-x: none;
+  overflow-y: auto;
 }
 
 body{
